--- a/MyNewService/ImageServiceGUI/ImageServiceGUI.csproj
+++ b/MyNewService/ImageServiceGUI/ImageServiceGUI.csproj
@@ -96,6 +96,7 @@
     <Compile Include="Models\SettingsModel.cs" />
     <Compile Include="Controls\StatusColorConverter.cs" />
     <Compile Include="ViewModels\LogsViewModel.cs" />
+    <Compile Include="ViewModels\MainWindowViewModel.cs" />
     <Compile Include="ViewModels\SettingsViewModel.cs" />
     <Compile Include="Views\MainWindow.xaml.cs">
       <DependentUpon>MainWindow.xaml</DependentUpon>
